@startuml

title __MOVABLE's Class Diagram__\n

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Movable {
            # speed : int
            + Movable()
            + Movable()
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Projectile {
            {static} + currentTank : Tank
            + visible : boolean
            + xSize : int
            + ySize : int
            - bullet : BufferedImage
            - damage : int
            - theta : int
            + Projectile()
            + draw()
            {static} + getTank()
            + getTheta()
            + isVisible()
            + setTankWorld()
            + update()
            + update()
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Tank {
            # coolDown : int
            # health : int
            # life : int
            # score : int
            # spawnPointX : int
            # spawnPointY : int
            - angle : int
            - down : int
            - isDead : boolean
            - left : int
            - mapSizeX : int
            - mapSizeY : int
            - moveDown : boolean
            - moveLeft : boolean
            - moveRight : boolean
            - moveUp : boolean
            - right : int
            - shoot : boolean
            - shootCoolDown : int
            - shootKey : int
            - up : int
            + Tank()
            + Tank()
            + bulletDamage()
            + collision()
            + draw()
            + getAngle()
            + getDownKey()
            + getHealth()
            + getLeftKey()
            + getLife()
            + getRightKey()
            + getScore()
            + getShootKey()
            + getTankCenterX()
            + getTankCenterY()
            + getUpKey()
            + healthUp()
            + isDead()
            + printTankData()
            + setAngle()
            + setHealthPoints()
            + setOtherTank()
            + setScore()
            + switchDownOff()
            + switchDownOn()
            + switchLeftOff()
            + switchLeftOn()
            + switchRightOff()
            + switchRightOn()
            + switchShootOff()
            + switchShootOn()
            + switchUpOff()
            + switchUpOn()
            + update()
            + update()
            - checkLimit()
            - shoot()
        }
      }
    }
  }
  

  TankGame.GameObject.Movable.Movable -up-|> TankGame.GameObject.GameObject
  TankGame.GameObject.Movable.Projectile .up.|> java.util.Observer
  TankGame.GameObject.Movable.Projectile -up-|> TankGame.GameObject.Movable.Movable
  TankGame.GameObject.Movable.Projectile o-- TankGame.TankWarGame : obj
  TankGame.GameObject.Movable.Projectile o-- TankGame.GameObject.Movable.Tank : p1
  TankGame.GameObject.Movable.Projectile o-- TankGame.GameObject.Movable.Tank : p2
  TankGame.GameObject.Movable.Tank .up.|> java.util.Observer
  TankGame.GameObject.Movable.Tank -up-|> TankGame.GameObject.Movable.Movable
  TankGame.GameObject.Movable.Tank o-- TankGame.TankWarGame : obj
  TankGame.GameObject.Movable.Tank o-- TankGame.GameObject.Movable.Tank : p1
  TankGame.GameObject.Movable.Tank o-- TankGame.GameObject.Movable.Tank : p2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
